# visit-scheduler

./: .env  .env-docker  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yml
docker/: entrypoint.sh
tests/: test_dummy.py
visit_scheduler/app/: main.py  security.py
visit_scheduler/app/models/: models.py
visit_scheduler/app/routers/: search_visit.py  visits.py
visit_scheduler/es_utils/: add.py  client.py  defenitions.py  handler.py  models.py  search.py
visit_scheduler/kafka_utils/: common.py  consumer.py  oauth.py  producer.py
visit_scheduler/package_utils/: logger_conf.py  settings.py
