[project]
name = "visit-scheduler"
version = "0.1.0"
description = "visit sched, part of ERSMS project"
authors = [
    {name = "kfijalkowski1", email = "k.1.fijalkowski@gmail.com"} 
]
license = "MIT"
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "elasticsearch (>=8.17.2,<9.0.0)",
    "kubernetes (>=32.0.1,<33.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
